replace measuring timeseries with daily holding snapshots
